openapi structure added
